namespace FpsSurvive.AnimationParameter
{
    public static class AniParameters
    {
        //Player ฐทร
        public static string xMoveSpeed = "XMoveSpeed";
		public static string yMoveSpeed = "YMoveSpeed";
		public static string isMove = "IsMove";

        //UI
        public static string isOpen = "IsOpen";
    }
}